[package]
name = "jmap-tools"
description = "JMAP object parser with JSON Pointer querying and patching support"
version = "0.1.1"
edition = "2024"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/jmap-tools"
homepage = "https://github.com/stalwartlabs/jmap-tools"
keywords = ["jmap", "json", "api", "tools"]
categories = ["parser-implementations"]
readme = "README.md"
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashify = "0.2.6"
rkyv = { version = "0.8", optional = true }

[features]
default = []
rkyv = ["dep:rkyv"]

